Addressed comment: Changed null check